--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                         <!-- </second-section> -->
                         <!-- =====> <AM/PM> <===== -->
-
+                            <span id="ampm" class=" px-6 py-2 rounded-md bg-[#6c7ee4] ">ff</span>
                         <!-- =====> </AM/PM> <===== -->
 
                     </div>
